@@ -34,6 +34,11 @@ Import-Package: com.google.common.annotations,
  com.openexchange.tools.net,
  com.openexchange.tools.sql,
  com.openexchange.tools.ssl,
+ com.sun.mail.auth,
+ com.sun.mail.handlers,
+ com.sun.mail.smtp,
+ com.sun.mail.util,
+ com.sun.mail.util.logging,
  javax.mail,
  javax.mail.internet,
  javax.mail.internet.idn,
